agrego b64 a execution plan
